Crash in [@ mozilla::net::BackgroundFileSaver::GetWorkerThreadAttention]
Categories
(Core :: Networking: File, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | + | fixed |
firefox79 | --- | fixed |
People
(Reporter: philipp, Assigned: fronkc1)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-081cbcce-d503-40d3-9e2a-9e4a40200608.
Top 10 frames of crashing thread:
0 xul.dll mozilla::net::BackgroundFileSaver::GetWorkerThreadAttention netwerk/base/BackgroundFileSaver.cpp:290
1 xul.dll mozilla::net::BackgroundFileSaver::Finish netwerk/base/BackgroundFileSaver.cpp:212
2 xul.dll NS_InvokeByIndex
3 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1140
4 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:946
5 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:585
6 xul.dll Interpret js/src/vm/Interpreter.cpp:3312
7 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:620
8 xul.dll JS_CallFunctionValue js/src/jsapi.cpp:2777
9 xul.dll nsXPCWrappedJS::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:963
this crash signature is newly appearing in firefox 78, somewhat more common for 32bit builds - presumably the change from bug 1620366 triggered this.
Assignee | ||
Comment 1•5 years ago
|
||
Taking a look as it looks like my change likely caused this
Assignee | ||
Comment 2•5 years ago
|
||
Previous implementation on Finish thread was shutdown but not set to
null, as background task queue cannot be shutdown need to add nullptr
check around access in notify worker.
Updated•5 years ago
|
![]() |
||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
[Tracking Requested - why for this release]:
Crash in BackgroundFileSaver
Comment 5•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Comment on attachment 9155172 [details]
Bug 1644237 - Fix crash in BackgroundFileSaver r=valentin
Beta/Release Uplift Approval Request
- User impact if declined: Potential crash
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Null check before dereferencing COMPtr.
- String changes made/needed:
Comment 7•5 years ago
|
||
Comment on attachment 9155172 [details]
Bug 1644237 - Fix crash in BackgroundFileSaver r=valentin
approved for 78.0b6
Comment 8•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Description
•