Bug 1644237 - Fix crash in BackgroundFileSaver r=valentin,necko-reviewers

Previous implementation on Finish thread was shutdown but not set to
null, as background task queue cannot be shutdown need to add nullptr
check around access in notify worker.

Differential Revision: https://phabricator.services.mozilla.com/D78845